Ajout de la théorie pour contour

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Importations\n",
@@ -102,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def grad(f):\n",
@@ -110,17 +114,18 @@
     "    h = 10**(-10)\n",
     "    return lambda x,y : np.array((f(x+h,y)-f(x,y), f(x,y+h)-f(x,y)))/h\n",
     "\n",
-    "def creerPlan(f, x0, y0):\n",
-    "    \"\"\"Retourne une fonction donnant le plan tangent en x0, y0 de f\"\"\"\n",
+    "def creerPlanTg(f, x0, y0):\n",
+    "    \"\"\"Retourne une fonction donnant le plan tangent en f(x0, y0)\"\"\"\n",
     "    gradFEnM = grad(f)(x0,y0)\n",
-    "    return lambda x,y : gradFEnM[0]*(x-x0) + gradFEnM[1]*(y-y0) + f(x0,y0)\n"
+    "    return lambda x,y : gradFEnM[0]*(x-x0) + gradFEnM[1]*(y-y0) + f(x0,y0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Premiers essais"
+    "### Premiers essais\n",
+    "Quelques test pour essayer de plot en 3D"
    ]
   },
   {
@@ -167,7 +172,45 @@
     "#Test de tracé du plan tg en un point (x0,y0)\n",
     "x0,y0 = 2,2\n",
     "planEnM = creerPlan(f, x0, y0)\n",
-    "ax.plot_surface(X, Y, planEnM(X,Y), cmap='spring')\n"
+    "ax.plot_surface(X, Y, planEnM(X,Y), cmap='spring')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Méthodologie\n",
+    "On va pour résoudre ce problème :\n",
+    "- commencer en partant d'un point $(x_0,0)$ trouvé sur l'arrête gauche en utilisant le TVI comme précédemment. On note ce point $M_0 = (x_0,y_0)$ avec donc $y_0 = 0$\n",
+    "- On va alors, pour créer le point $M_1 = (x_1,y_1)$, regarder la droite formée par l'intersection du plan tangent à $f$ en $M_0$ et le plan d'équation $z=c$. On trouve alors exactement deux points se situant à une distance $delta$ de $M_0$, mais à moins d'être dans le cas particulier (donc impossible en preatique) ou la droite est parallèle à l'axe des abscisses, un seul de ces deux points possède une coordonnée $y$ positive. On note alors ce point $M_1$.\n",
+    "- On réutilise la même méthode pour construire ainsi par récurence la suite de points $(M_n)$ qui donne une bonne approximation de la courbe de niveau (approximation d'autant meilleur que $delta$ est petit). Il n'y a jamais de problème de choix entre les deux points possibles sur la droite car l'un d'entre eux est $M_{n-1}$, donc il suffit de prendre l'autre.\n",
+    "\n",
+    "\n",
+    "Mathématiquement, la droite $D$ décrite ci dessus possède les caractéristiques suivantes :\n",
+    "$$\\forall (x,y,z) \\in D, \\frac{\\partial f}{\\partial x}(M_0) \\times (x-x_0) + \\frac{\\partial f}{\\partial y}(M_0) \\times (y-y_0) + f(M_0) = 0 \\text{ et } z = 0$$ \n",
+    "Donc si l'on cherche les points éloignés de $\\delta$ de $M_0$, ce qui se traduit par $(x-x_0)^2 + (y-y_0)^2 = \\delta ^2$, on se retrouve à résoudre un système de la forme :\n",
+    "$$\\lambda a + \\mu b + \\nu = 0 \\text{ et } a^2 + b^2 = \\delta ^2$$\n",
+    "Sous réserve que $\\lambda$ et $\\mu$ soient non nuls (toujours le cas en pratique, comme ce sont les coordonnées du gradient de $f$ en $M_0$), se système se résout et l'on trouve alors deux couples de solutions.\n",
+    "\n",
+    "On garde, pour le cas ou l'on cherche $M_1$, celle telle que $y_1 >0$, et pour les cas ou 'lon cherche $M_{n+1}$ celle qui n'est pas $M_{n-1}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def D(g, x0, y0):\n",
+    "    \"\"\"Fonction rentournant une fonction paramétrique donnant la droite appartenant et au plan tangent à g en M0 mais aussi au plan z=0\"\"\"\n",
+    "    gradFEnM0 = grad(f)(x0,y0)\n",
+    "    return lama\n",
+    "\n",
+    "def simple_contour(f, c=0.0, delta=0.01):"
    ]
   }
  ],
