Explications + graphes dans le notebook

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -187,12 +187,49 @@
    },
    "source": [
     "### 3) Première approche\n",
+    "Le but est de trouver la ligne de niveau de notre fonction $f$ caractérisée par son altitude c.\n",
     "On va pour résoudre ce problème :\n",
     "- commencer en partant d'un point $(x_0,0, z_0)$ trouvé sur l'arrête gauche en utilisant le TVI comme précédemment, où $z_0 = c$. On note ce point $M_0 = (x_0,y_0, z_0)$ avec donc $y_0 = 0$\n",
     "- On va alors, pour créer le point $M_1 = (x_1,y_1, z_1)$, regarder la droite formée par l'intersection du plan tangent à $f$ en $M_0$ et le plan d'équation $z=c$. On trouve alors exactement deux points se situant à une distance $\\delta$ de $M_0$, mais à moins d'être dans le cas particulier (donc impossible en pratique) ou la droite est parallèle à l'axe des abscisses, un seul de ces deux points possède une coordonnée $x$ positive (plus généralement, un seul de ces deux points est dans le domaine). On note alors ce point $M_1$.\n",
-    "- On réutilise la même méthode pour construire ainsi par récurence la suite de points $(M_n)$ qui donne une bonne approximation de la courbe de niveau (approximation d'autant meilleur que $\\delta$ est petit). Il n'y a jamais de problème de choix entre les deux points possibles sur la droite car l'un d'entre eux est $M_{n-1}$, donc il suffit de prendre l'autre.\n",
-    "\n",
-    "\n",
+    "- On réutilise la même méthode pour construire ainsi par récurence la suite de points $(M_n)$ qui donne une bonne approximation de la courbe de niveau (approximation d'autant meilleur que $\\delta$ est petit). Il n'y a jamais de problème de choix entre les deux points possibles sur la droite car l'un d'entre eux est $M_{n-1}$, donc il suffit de prendre l'autre."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De manière graphique, on se place directement dans le plan $z=c$, et l'on trace en bleu la ligne de niveau que l'on souhaite justement approchée.\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On trouve en se baladant sur l'arrête gauche le point $M_0$\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On trace alors la droite D, qui est donc la tangante à notre ligne de niveau dans le plan $z=c$\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On garde le seul point de cette droite à une distance $\\delta$ de $M_0$ que l'on nomme $M_1$.\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mathématiquement, la droite $D$ décrite ci dessus possède les caractéristiques suivantes :\n",
     "$$\\forall (x,y,z) \\in D, \\left\\{\n",
     "    \\begin{array}{ll}\n",
@@ -223,6 +260,15 @@
     "\n",
     "On garde, pour le cas ou l'on cherche $M_1$, celle qui se trouve dans le domaine $[0,1]^2$, et pour les cas ou l'on cherche $M_{n+1}$ celle qui n'est pas $M_{n-1}$ (ce qui en pratique se fait en reardant le point le plus éloigné de $M_{n-1}$ entre les deux points candidats)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -416,13 +462,35 @@
     "\n",
     "Le soucis de cette méthode vient, de manière analogue à la méthode d'Euler pour la résolution d'équation différentielle, de la propagation d'une erreur qui peut vite devenir importante.\n",
     "\n",
-    "On se propose donc d'utiliser une autre méthode afin d'affiner la précision, en imposant réellement à chaque point que $f(M_n) = c$.\n",
+    "On se propose donc d'utiliser une autre méthode afin d'affiner la précision, en imposant qu'à chaque point que $f(M_n) = c$.\n",
     "\n",
-    "Pour cela, nous gardons l'esprit général de la fonction. Sauf qu'au lieu de se contenter du point $M_{n+1}$ que nous avons trouvé, nous allons depuis ce point utiliser une méthode de Newton pour se rapprocher du véritable point tel que $f(M_{n+1})=c$.\n",
+    "Pour cela, nous allons garder l'esprit général de la fonction. Sauf qu'au lieu de se contenter du point $M_{n+1}$ que nous avons trouvé, nous allons depuis ce point utiliser une méthode de Newton pour se rapprocher de la ligne de niveau et triuver un meilleur point tel que $f(M_{n+1})=c$.\n",
     "\n",
-    "Notons donc le point trouvé précédemment $M_{n+1}'$, point sur lequel nous allons nous reposer pour trouver une meilleur approximation $M_{n+1}$.\n",
-    "\n",
-    "Pour cela, nous allons trouver la droite perpendiculaire à la tangante $D$ dans le plan $z=c$ passant par $M_{n+1}'$. On trouve pour cela un vecteur directeur de cette droite $\\vec{u}$"
+    "Notons donc le point trouvé précédemment $M_{n+1}'$, point sur lequel nous allons nous reposer pour trouver une meilleure approximation $M_{n+1}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour cela, nous allons trouver la droite perpendiculaire à la tangante $D$ dans le plan $z=c$ passant par $M_{n+1}'$.\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut alors utiliser la méthode de Newton sur f selon la direction de la droite $D'$ : on tombe alors sur un point appartenant, à un $\\epsilon$ près arbitrairement petit, de la courbe de niveau.\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De la même facon, on peut trouver tous les autres points, et l'approximation de la courbe de niveau ets bien meilleure\n",
+    "![Courbe de niveau dans le plan $z=c$](Explications/Figure_7.png)"
    ]
   },
   {
