--- a/projet.ipynb
+++ b/projet.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "#Importations\n",
+    "#Importations des bibliothèques nécéssaires\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "#import autograd\n",
     "import numpy as np\n",
@@ -34,7 +34,7 @@
     "fonction qui renvoie un flottant éloigné d’au plus `eps` d’un tel `t` ou `None` si la condition\n",
     "évoquée ci-dessus n’est pas satisfaite.\n",
     "\n",
-    "Il suffit que la fonction $t \\longrightarrow f(0,t)$ soit continue sur $[0,1]$ (ce qui est le cas car $f$ est continûment différentiable), et que $(f(0,0)-c)(f(0,1)-c) <= 0$ pour appliquer le TVI.\n",
+    "Il suffit que la fonction $t \\longrightarrow f(0,t)$ soit continue sur $[0,1]$ (ce qui est le cas car $f$ est continûment différentiable), et que $(f(0,0)-c)(f(0,1)-c) \\leq 0$ (i.e $c \\in [f(0,0), f(0,1)]$ ou $c \\in [f(0,1), f(0,0)]$ ) pour appliquer le TVI.\n",
     "Voir la fonction `find_seed(g, c=0, eps=2**(-26))`.\n",
     "\n"
    ]
@@ -55,7 +55,7 @@
    "source": [
     "def find_seed(g, c=0, eps=2**(-26)):\n",
     "    \"\"\"Methode renvoyant un réel t de [0,1] tq g(t) = c.\n",
-    "    La fonction retourne une valueError si jamais (g(0)-c)(g(1)-c) > 0\"\"\"\n",
+    "    La fonction lève une valueError si jamais (g(0)-c)(g(1)-c) > 0\"\"\"\n",
     "    if (g(0)-c)*(g(1)-c) > 0:\n",
     "        raise ValueError(\"Erreur : aucune garantie qu'un t tel que g(t) = c existe !\")\n",
     "    #On privilégie la dichotomie à la méthode de Newton car il faut travailler avec le eps\n",
@@ -72,7 +72,7 @@
     "        return dicho(g,m,b,eps)\n",
     "\n",
     "\n",
-    "#Test\n",
+    "#Test avec la fonction sin et c=1/2 pour retourner la valeur de pi/6\n",
     "print(\"$\\pi$ /6 = \" + str(find_seed(np.sin, c=1/2)))"
    ]
   },
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "### 1) Outils mathématiques à disposition\n",
-    "On commence par mettre en place les différents outils mathématiques dont nous allons avoir besoin"
+    "On commence par mettre en place les différents outils mathématiques dont nous allons avoir besoin pour définir `simple_contour`."
    ]
   },
   {
@@ -114,7 +114,8 @@
     "    return lambda x,y : np.array((f(x+h,y)-f(x,y), f(x,y+h)-f(x,y)))/h\n",
     "\n",
     "def derive(g):\n",
-    "    \"\"\"Retourne la dérivée de f, donc si f est à une seule variable\"\"\"\n",
+    "    \"\"\"Retourne la dérivée de g par dérivation numérique (g'(x) ≈ (g(x+h)-g(x))/h à l'ordre 1),\n",
+    "    donc si g est à une seule variable\"\"\"\n",
     "    h = 10**(-10)\n",
     "    return lambda t : (g(t+h)-g(t))/h\n",
     "\n",
@@ -5917,7 +5918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   },
   "mimetype": "text/x-python",
   "name": "python",
