--- a/projet.ipynb
+++ b/projet.ipynb
@@ -35,6 +35,7 @@
     "évoquée ci-dessus n’est pas satisfaite.\n",
     "\n",
     "Il suffit que la fonction $t \\longrightarrow f(0,t)$ soit continue sur $[0,1]$ (ce qui est le cas car $f$ est continûment différentiable), et que $(f(0,0)-c)(f(0,1)-c) \\leq 0$ (i.e $c \\in [f(0,0), f(0,1)]$ ou $c \\in [f(0,1), f(0,0)]$ ) pour appliquer le TVI.\n",
+    "\n",
     "Voir la fonction `find_seed(g, c=0, eps=2**(-26))`.\n",
     "\n"
    ]
@@ -54,11 +55,11 @@
    ],
    "source": [
     "def find_seed(g, c=0, eps=2**(-26)):\n",
-    "    \"\"\"Methode renvoyant un réel t de [0,1] tq g(t) = c.\n",
+    "    \"\"\"Methode renvoyant un réel t de [0,1] tel que g(t) = c.\n",
     "    La fonction lève une valueError si jamais (g(0)-c)(g(1)-c) > 0\"\"\"\n",
     "    if (g(0)-c)*(g(1)-c) > 0:\n",
     "        raise ValueError(\"Erreur : aucune garantie qu'un t tel que g(t) = c existe !\")\n",
-    "    #On privilégie la dichotomie à la méthode de Newton car il faut travailler avec le eps\n",
+    "    # On privilégie la dichotomie à la méthode de Newton car il faut travailler avec le eps\n",
     "    return dicho(lambda t : g(t) - c,0,1,eps)\n",
     "\n",
     "def dicho(g,a,b,eps):\n",
@@ -72,7 +73,7 @@
     "        return dicho(g,m,b,eps)\n",
     "\n",
     "\n",
-    "#Test avec la fonction sin et c=1/2 pour retourner la valeur de pi/6\n",
+    "# Test avec la fonction sin et c=1/2 pour retourner la valeur de pi/6\n",
     "print(\"$\\pi$ /6 = \" + str(find_seed(np.sin, c=1/2)))"
    ]
   },
@@ -85,13 +86,13 @@
     "\n",
     "`def simple_contour(f, c=0.0, delta=0.01):\n",
     "...\n",
-    "return x, y`\n",
+    "return (x, y)`\n",
     "\n",
     "\n",
     "qui renvoie un fragment de ligne de niveau de valeur c de f, sous la forme\n",
-    "de deux tableaux 1d d’abscisses et d’ordonnées de points de cette ligne. Les\n",
+    "de deux tableaux (1 dimension) d’abscisses et d’ordonnées de points de cette ligne. Les\n",
     "points devront être espacés d’approximativement delta. En cas d’impossibilité\n",
-    "de générer un tel fragment deux tableaux vides devront être renvoyés."
+    "de générer un tel fragment, deux tableaux vides devront être renvoyés."
    ]
   },
   {
@@ -99,7 +100,9 @@
    "metadata": {},
    "source": [
     "### 1) Outils mathématiques à disposition\n",
-    "On commence par mettre en place les différents outils mathématiques dont nous allons avoir besoin pour définir `simple_contour`."
+    "On commence par mettre en place les différents outils mathématiques dont nous allons avoir besoin pour définir `simple_contour`.\n",
+    "\n",
+    "On va utiliser la méthode du plan tangent à l'aide du gradient (préférable à la méthode de Newton car beaucoup plus rapide en temps)."
    ]
   },
   {
@@ -108,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grad(f):\n",
+    "def grad(f): # On va ensuite l'utiliser pour déterminer le plan tangent\n",
     "    \"\"\"Retourne la fonction grad(f)\"\"\"\n",
     "    h = 10**(-10)\n",
     "    return lambda x,y : np.array((f(x+h,y)-f(x,y), f(x,y+h)-f(x,y)))/h\n",
@@ -162,22 +165,22 @@
    "source": [
     "def f(x, y):\n",
     "    \"\"\"Fonction f avec laquelle on travaille\"\"\"\n",
-    "    return np.power(x,2) + np.power(y,2)\n",
-    "    #return np.exp(-10*(np.power(x-0.5,2)+np.power(y-0.5,2)))\n",
+    "    return np.power(x,2) + np.power(y,2) # f(x, y) = x^2 + y^2\n",
+    "    # return np.exp(-10*(np.power(x-0.5,2)+np.power(y-0.5,2)))\n",
     "\n",
     "\n",
-    "#Création du graphe en 3D\n",
+    "# Création du graphe en 3D de f\n",
     "domain_x = np.linspace(0, 1)   \n",
     "domain_y = np.linspace(0, 1)\n",
     "X, Y = np.meshgrid(domain_x, domain_y)\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "\n",
-    "#On trace f\n",
+    "# On trace f en bleu/vert\n",
     "ax.plot_surface(X, Y, f(X, Y), cmap='winter')\n",
     "\n",
-    "#Test de tracé du plan tg en un point (x0,y0)\n",
-    "x0,y0 = 0.3,0.3\n",
+    "# Test de tracé du plan tg en un point (x0,y0) en rouge/jaune\n",
+    "x0, y0 = 0.3, 0.3\n",
     "ax.scatter(x0,y0, f(x0,y0), s=10)\n",
     "planEnM = creerPlanTg(f, x0, y0)\n",
     "ax.plot_surface(X, Y, planEnM(X,Y), cmap='spring')"
@@ -331,7 +334,7 @@
     "\n",
     "Donc si l'on cherche les points éloignés de $\\delta$ de $M_0$, ce qui se traduit par $(x-x_0)^2 + (y-y_0)^2 = \\delta ^2$, on se retrouve à résoudre un système de la forme :\n",
     "$$\\lambda a + \\mu b = 0 \\text{ et } a^2 + b^2 = \\delta ^2$$\n",
-    "Sous réserve que $\\lambda$ et $\\mu$ soient non nuls (toujours le cas en pratique, comme ce sont les coordonnées du gradient de $f$ en $M_0$), se système se résout et l'on trouve alors deux couples de solutions qui sont les suivants :\n",
+    "Sous réserve que $\\lambda$ et $\\mu$ soient non nuls (toujours le cas en pratique, comme ce sont les coordonnées du gradient de $f$ en $M_0$), ce système se résout et l'on trouve alors deux couples de solutions qui sont les suivants :\n",
     "\n",
     "$$\\left\\{\n",
     "    \\begin{array}{ll}\n",
@@ -349,7 +352,7 @@
     "\\text{ avec } \\eta = \\frac{\\delta}{\\sqrt{\\lambda^2 + \\mu^2}}$$\n",
     "\n",
     "\n",
-    "On garde, pour le cas ou l'on cherche $M_1$, celle qui se trouve dans le domaine $[0,1]^2$, et pour les cas ou l'on cherche $M_{n+1}$ celle qui n'est pas $M_{n-1}$ (ce qui en pratique se fait en reardant le point le plus éloigné de $M_{n-1}$ entre les deux points candidats)."
+    "On garde, pour le cas où l'on cherche $M_1$, la solution qui se trouve dans le domaine $[0,1]^2$, et pour les cas où l'on cherche $M_{n+1}$, celle qui n'est pas $M_{n-1}$ (ce qui en pratique se fait en regardant le point le plus éloigné de $M_{n-1}$ entre les deux points candidats)."
    ]
   },
   {
@@ -367,7 +370,7 @@
    "source": [
     "### 4) Implémentation\n",
     "\n",
-    "On commence donc par définir les fonctions de RecherchedeM0 qui seront là pour trouver le point de départ sur lequel travaillé, d'abord celle de l'énoncé en partant de l'arrête gauche en utilisant donc une méthode de type dichotomie, mais aussi les autres sur le même principe."
+    "On commence donc par définir les fonctions de `RechercheM0ArreteX` qui seront là pour trouver le point de départ sur lequel travaillé, d'abord celle de l'énoncé en partant de l'arrête gauche en utilisant donc une méthode de type dichotomie, mais aussi les autres sur le même principe."
    ]
   },
   {
@@ -378,7 +381,7 @@
    },
    "outputs": [],
    "source": [
-    "#Fonction de recherche\n",
+    "# Fonction de recherche sur chaque arrête du carré défini sur [0;1]x[0;1]\n",
     "def RechercheM0ArreteGauche(f, c):\n",
     "    return (0, find_seed(lambda t : f(0,t), c))\n",
     "\n",
@@ -411,7 +414,7 @@
    "outputs": [],
    "source": [
     "def DansLeDomaine(M):\n",
-    "    \"\"\"Vérifie si le point M est dans le domaine [0,1]^2\"\"\"\n",
+    "    \"\"\"Vérifie si le point M est dans le domaine [0;1]x[0;1]\"\"\"\n",
     "    if M[0] >= 0 and M[0] <= 1:\n",
     "        if M[1] >= 0 and M[1] <= 1:\n",
     "            return True\n",
@@ -419,7 +422,7 @@
     "\n",
     "\n",
     "def ProchainsPointsPotentiels(gradf, M, c, delta):\n",
-    "    \"\"\"Retourne les deux candidats pour le rôle de Mn+1 en se basant sur Mn, en éploitant le calcul théorique précédent\"\"\"\n",
+    "    \"\"\"Retourne les deux candidats pour le rôle de Mn+1 en se basant sur Mn, en exploitant le calcul théorique précédent\"\"\"\n",
     "    gradfEnM = gradf(M[0],M[1])\n",
     "    l, mu = gradfEnM[0], gradfEnM[1]\n",
     "    eta = delta/(np.sqrt(l**2 + mu**2))\n",
@@ -427,7 +430,7 @@
     "\n",
     "\n",
     "def ChoisirPointPlusEloigne(ListeM, MRepere):\n",
-    "    \"\"\"Retourne parmi une liste de 2 points ListeM le plus éloigné de MRepere\"\"\"\n",
+    "    \"\"\"Retourne parmi une liste de 2 points ListeM le plus éloigné de MRepere comme expliqué précédemment\"\"\"\n",
     "    a = (ListeM[0][0] - MRepere[0])**2 + (ListeM[0][1] - MRepere[1])**2\n",
     "    b = (ListeM[1][0] - MRepere[0])**2 + (ListeM[1][1] - MRepere[1])**2\n",
     "    if a > b:\n",
@@ -442,7 +445,7 @@
    "source": [
     "On implémente donc une finction `simple_contour(f, c=0.0, delta=0.01, RechercheM0)`.\n",
     "La fonction `f` est la fonction à deux variables dont nous cherchons une ligne de niveau de hauteur $c$.\n",
-    "Le paramètre `delta` vient définir l'écart entre les points que nous allons trouver.\n",
+    "Le paramètre `delta` vient définir l'écart entre les points que nous allons trouver (sorte de précision ou pas entre les points trouvés).\n",
     "Enfin, le paramètre supplémentaire `RechercheM0` est une fonction retournant le point $M_0$ que nous allons utiliser comme point de départ."
    ]
   },
@@ -455,21 +458,21 @@
    "outputs": [],
    "source": [
     "def simple_contour(f, c=0.0, delta=0.01, RechercheM0 = RechercheM0ArreteGauche):\n",
-    "    \"\"\"Methode donnant la ligne de niveau de la fonction f a la hauteur c sur le domaine [0,1]^2\n",
+    "    \"\"\"Methode donnant la ligne de niveau de la fonction f a la hauteur c sur le domaine [0;1]x[0;1]\n",
     "    Il est indispensable qu'il existe un point t tel que f(t,0) = c\n",
     "    L'argument fonction de recherche donne une fonction visant à trouver la position du point M0 à utilisée\"\"\"\n",
     "    gradf = grad(f)\n",
     "\n",
-    "    #Liste qui contiendra les points que nous trouvons appartenant à la courbe de niveau\n",
+    "    # Liste qui contiendra les points que nous trouvons appartenant à la courbe de niveau\n",
     "    M = []\n",
     "    \n",
-    "    #On commence par trouver M0, et l'on retourne une liste vide si jamais l'algorithme plante\n",
+    "    # On commence par trouver M0, et l'on retourne une liste vide si jamais l'algorithme plante\n",
     "    try :\n",
     "        M.append(RechercheM0(f,c))\n",
     "    except ValueError:\n",
     "        return ([],[])\n",
     "\n",
-    "    #On en déduit alors le point M1, c'est à dire le seul point écarté de delta de M0 sur la droite D qui est dans le domaine\n",
+    "    # On en déduit alors le point M1, c'est à dire le seul point écarté de delta de M0 sur la droite D qui est dans le domaine\n",
     "    M1Potentiels = ProchainsPointsPotentiels(gradf, M[0], c, delta)\n",
     "    if DansLeDomaine(M1Potentiels[0]) :\n",
     "        M.append(M1Potentiels[0])\n",
@@ -478,28 +481,28 @@
     "    else:\n",
     "        return ([],[])\n",
     "\n",
-    "    #On lance alors l'algorithme de recherche récursif dans la limite d'un nombre N de points max\n",
+    "    # On lance alors l'algorithme de recherche récursif dans la limite d'un nombre N de points max\n",
     "    N = 10000\n",
     "    for n in range(1,N):\n",
-    "        #On trouve les deux points potentiels au role de Mn+1 à partir de la position de Mn\n",
+    "        # On trouve les deux points potentiels au role de Mn+1 à partir de la position de Mn\n",
     "        Mnp1Potentiels = ProchainsPointsPotentiels(gradf, M[n], c, delta)\n",
     "\n",
-    "        #On choisit celui des deux qui est le plus éloigné de Mn-1 :\n",
+    "        # On choisit celui des deux qui est le plus éloigné de Mn-1 :\n",
     "        Mnp1 = ChoisirPointPlusEloigne(Mnp1Potentiels, M[n-1])\n",
     "\n",
-    "        #On vérifie que le point est toujours dans le domaine, sinon on arrête\n",
+    "        # On vérifie que le point est toujours dans le domaine, sinon on arrête\n",
     "        if not DansLeDomaine(Mnp1):\n",
     "            break;\n",
     "\n",
-    "        #On vérifie également que le point n'est pas confondu avec un des autres points deja calculés, sinon c'est que l'on boucle\n",
+    "        # On vérifie également que le point n'est pas confondu avec un des autres points deja calculés, sinon c'est que l'on boucle\n",
     "        for Mi in M[:-1]:\n",
     "            if (Mi[0] - Mnp1[0])**2 + (Mi[1] - Mnp1[1])**2 <= delta**2:\n",
     "                break;\n",
     "\n",
-    "        #On peut continuer, et on ajoute notre point à la suite\n",
+    "        # On peut continuer, et on ajoute notre point à la suite\n",
     "        M.append(Mnp1)\n",
     "\n",
-    "    #La fin du programme devant retourner une liste de coordonée x et y, on décompose les coordonnées des points\n",
+    "    # La fin du programme devant retourner une liste de coordonée x et y, on décompose les coordonnées des points\n",
     "    return ([Mi[0] for Mi in M], [Mi[1] for Mi in M])\n",
     "\n",
     "\n"
