--- a/projet.ipynb
+++ b/projet.ipynb
@@ -102,7 +102,7 @@
     "### 1) Outils mathématiques à disposition\n",
     "On commence par mettre en place les différents outils mathématiques dont nous allons avoir besoin pour définir `simple_contour`.\n",
     "\n",
-    "On va utiliser la méthode du plan tangent à l'aide du gradient (préférable à la méthode de Newton car beaucoup plus rapide en temps)."
+    "On va dans un premier temps utiliser la méthode du plan tangent à l'aide du gradient (préférable à la méthode de Newton car beaucoup plus rapide en temps)."
    ]
   },
   {
@@ -536,6 +536,7 @@
    ],
    "source": [
     "def Tracer3DfEtContourSimple(f, z0):\n",
+    "    \"\"\"\"Méthode permettant de tracer la ligne de niveau associé à une surface sur le domaine [0;1]x[0;1]\"\"\"\n",
     "    #Premier essais\n",
     "    courbeX,courbeY = simple_contour(f, c=z0, RechercheM0=RechercheM0ArreteDroite)\n",
     "\n",
@@ -546,10 +547,10 @@
     "    fig = plt.figure()\n",
     "    ax = Axes3D(fig)\n",
     "\n",
-    "    #On trace f\n",
+    "    #On trace f (même f qu'au départ)\n",
     "    ax.plot_surface(X, Y, f(X, Y), cmap='winter')\n",
     "\n",
-    "    #On trace la courbe de niveau\n",
+    "    #On trace la courbe de niveau (en orange)\n",
     "    ax.plot(courbeX, courbeY, z0)\n",
     "    ax.set_title(f\"Courbe de niveau de f pour z = {z0}\")\n",
     "    \n",
@@ -568,7 +569,7 @@
     "\n",
     "On se propose donc d'utiliser une autre méthode afin d'affiner la précision, en imposant qu'à chaque point que $f(M_n) = c$.\n",
     "\n",
-    "Pour cela, nous allons garder l'esprit général de la fonction. Sauf qu'au lieu de se contenter du point $M_{n+1}$ que nous avons trouvé, nous allons depuis ce point utiliser une méthode de Newton pour se rapprocher de la ligne de niveau et triuver un meilleur point tel que $f(M_{n+1})=c$.\n",
+    "Pour cela, nous allons garder l'esprit général de la fonction. Sauf qu'au lieu de se contenter du point $M_{n+1}$ que nous avons trouvé, nous allons, depuis ce point, utiliser une méthode de Newton pour se rapprocher de la ligne de niveau et trouver un meilleur point tel que $f(M_{n+1})=c$.\n",
     "\n",
     "Notons donc le point trouvé précédemment $M_{n+1}'$, point sur lequel nous allons nous reposer pour trouver une meilleure approximation $M_{n+1}$."
    ]
@@ -579,14 +580,14 @@
    "source": [
     "Pour cela, nous allons trouver la droite perpendiculaire à la tangente $D$ dans le plan $z=c$ passant par $M_{n+1}'$.\n",
     "![Courbe de niveau dans le plan $z=c$](Explications/Figure_5.png)\n",
-    "*RQ : Les droites sont bien perpendiculaires, l'impression qu'elle ne le sont pas vient du faites que le repère n'est pas orthonormé*"
+    "*RQ : Les droites sont bien perpendiculaires, l'impression qu'elles ne le sont pas vient du fait que le repère n'est pas orthonormé*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mathématiquement, vu que l'on cherche une droite passant par $M_{n+1}'$ perpendiculaire à la tangente trouvée précédemment qui était elle même perpendiculaire au gradiant par définition, alors on cherche une droite de vecteur directeur colinéaire avec le gradient en $M_n$, c'est à dire un vecteur $\\vec{u}$ tel que $\\vec{u} \\wedge \\vec{\\nabla}f(M_n) = 0$. Comme il existe une infinité de solution ($\\vec{u}$ peut etre de taille quelconque), on peut arbitrairement imposer $\\vec{u}^2 = \\frac{\\partial f}{\\partial x}(M_n)^2 + \\frac{\\partial f}{\\partial y}(M_n)^2$. Ainsi on se retrouve avec le système suivant :\n",
+    "Mathématiquement, vu que l'on cherche une droite passant par $M_{n+1}'$ perpendiculaire à la tangente trouvée précédemment qui était elle même perpendiculaire au gradiant par définition, alors on cherche une droite de vecteur directeur colinéaire avec le gradient en $M_n$, c'est à dire un vecteur $\\vec{u}$ tel que $\\vec{u} \\wedge \\vec{\\nabla}f(M_n) = 0$. Comme il existe une infinité de solutions ($\\vec{u}$ peut etre de taille quelconque), on peut arbitrairement imposer $\\vec{u}^2 = \\frac{\\partial f}{\\partial x}(M_n)^2 + \\frac{\\partial f}{\\partial y}(M_n)^2$. Ainsi on se retrouve avec le système suivant :\n",
     "\n",
     "$$(E) \\iff \\left\\{\n",
     "    \\begin{array}{ll}\n",
@@ -595,7 +596,7 @@
     "    \\end{array}\n",
     "\\right.$$\n",
     "\n",
-    "On reconnait un système de la même forme que précédement, et donc avec $\\lambda = \\frac{\\partial f}{\\partial x}(M_n)$ et $\\mu = \\frac{\\partial f}{\\partial y}(M_n)$, on trouve toujours :\n",
+    "On reconnaît un système de la même forme que précédement, et donc avec $\\lambda = \\frac{\\partial f}{\\partial x}(M_n)$ et $\\mu = \\frac{\\partial f}{\\partial y}(M_n)$, on trouve toujours :\n",
     "\n",
     "$$(E) \\iff \\left\\{\n",
     "\\begin{array}{ll}\n",
@@ -609,7 +610,7 @@
     "\\end{array}\\right. \n",
     "\\text{ avec } \\eta = \\frac{\\sqrt{\\lambda^2 + \\mu^2}}{\\sqrt{\\lambda^2 + \\mu^2}} = 1$$\n",
     "\n",
-    "Système qui à également deux solutions, mais encore de facon arbitraire, on choisit la première sans réelle différence.\n",
+    "Système qui a également deux solutions, mais encore de façon arbitraire, on choisit la première sans réelle différence.\n",
     "On a donc tout simplement $\\vec{u}$ = $\\vec{\\nabla}f(M_n)$."
    ]
   },
@@ -617,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut alors utiliser la méthode de Newton sur f selon la direction de la droite $D'$ : on tombe alors sur un point appartenant, à un $\\epsilon$ près arbitrairement petit, de la courbe de niveau.\n",
+    "On peut alors utiliser la méthode de Newton sur f selon la direction de la droite $D'$ : on tombe alors sur un point appartenant, à un $\\epsilon$ près arbitrairement petit, à la courbe de niveau.\n",
     "![Courbe de niveau dans le plan $z=c$](Explications/Figure_6.png)\n",
     "\n",
     "Mathématiquement, on applique la méthode de Newton à la fonction $h : t \\longrightarrow f(t\\vec{u} + \\vec{M_{n+1}'}) - c = f(u_xt +x_{n+1}',u_yt + y_{n+1}') - c$ afin de trouver sa racine la plus proche, et l'on note alors ce point $M_{n+1}$."
@@ -638,7 +639,7 @@
    "outputs": [],
    "source": [
     "def TrouverMnp1(gradf, Mn, Mnp1prime, c = 0.0):\n",
-    "    \"\"\"Méthode qui trouve le point Mn+1 à partir du point Mn+1' par la méthode expliquée ce dessus\"\"\"\n",
+    "    \"\"\"Méthode qui trouve le point Mn+1 à partir du point Mn+1' par la méthode expliquée ci-dessus\"\"\"\n",
     "    u = gradf(Mn[0],Mn[1])\n",
     "    h = lambda t : f(t*u[0] + Mnp1prime[0],t*u[1] + Mnp1prime[1])\n",
     "    t0 = Newton(lambda t : h(t) - c)\n",
@@ -755,7 +756,8 @@
     }
    ],
    "source": [
-    "Tracer3DfEtContourSimple(f, 1.25)"
+    "Tracer3DfEtContourSimple(f, 1.25)\n",
+    "# La ligne de niveau est là encore en orange."
    ]
   },
   {
@@ -767,8 +769,8 @@
     "A présent, pour réaliser la fonction contour en se basant sur simple_contour, il va falloir :\n",
     "- Utiliser les arguments $xc$ et $yc$ pour créer des intervalles, puis effectuer un produit cartésien de ces deux ensembles pour disposer d'un découpage du domaine complet en sous domaine.\n",
     "- Puis pour chaque sous domaine $D = [x_0,x_1]\\times[y_0,y_1]$, on va créer une fonction $g : [0,1]^2 \\longrightarrow [x_0,x_1]\\times[y_0,y_1]$ telle que $g(u,v) = f(x_0 + (x_1-x_0)u, y_0 + (y_1-y_0)v)$ afin de pouvoir travailler avec la fonction $g$ en utilisant la fonction `simple_contour`\n",
-    "- On peut à présent trouver les lignes de niveau de $g$ sur $[0,1]^2$ en utilisant 4 fois l'algorithme afin de partir des 4 arrêtes possibles. Puis, on modifie de la même facon les coordonénes des points trouvés afin qu'il soient replacé dans l'espace de sortie correcte et non pas dans leur version normalisée. On obtient donc les points de la ligne de niveau de $f$ restreinte à $D$.\n",
-    "- En faisant ca pour chaque sous domaine, il ne reste qu'à faire l'union de tous les points trouvés pour avoir l'ensemble des points de la ligne de niveau de $f$ sur tout le domaine étudié."
+    "- On peut à présent trouver les lignes de niveau de $g$ sur $[0,1]^2$ en utilisant 4 fois l'algorithme afin de partir des 4 arrêtes possibles. Puis, on modifie de la même façon les coordonénes des points trouvés afin qu'ils soient replacés dans l'espace de sortie correcte et non pas dans leur version normalisée. On obtient donc les points de la ligne de niveau de $f$ restreinte à $D$.\n",
+    "- En faisant cela pour chaque sous domaine, il ne reste qu'à faire l'union de tous les points trouvés pour avoir l'ensemble des points de la ligne de niveau de $f$ sur tout le domaine étudié."
    ]
   },
   {
@@ -844,28 +846,28 @@
     }
    ],
    "source": [
-    "#Premier essais\n",
+    "# Premier essais avec un plan z = \n",
     "z0 = 0.8\n",
     "courbeX,courbeY = contour(f, c=z0)\n",
     "\n",
-    "#Création du graphe en 3D\n",
+    "# Création du graphe de f en 3D\n",
     "domain_x = np.linspace(0 - 0.2, 1 + 0.2)   \n",
     "domain_y = np.linspace(0 - 0.2, 1 + 0.2)\n",
     "X, Y = np.meshgrid(domain_x, domain_y)\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "\n",
-    "#On trace f\n",
+    "# On trace f\n",
     "ax.plot_surface(X, Y, f(X, Y), cmap='winter')\n",
     "\n",
-    "#On trace les contours\n",
+    "# On trace les contours\n",
     "Contours = [(0,y) for y in np.linspace(0,1,1000)]\n",
     "Contours += [(x,1) for x in np.linspace(0,1,1000)]\n",
     "Contours += [(1,1-y) for y in np.linspace(0,1,1000)]\n",
     "Contours += [(1-x,0) for x in np.linspace(0,1,1000)]\n",
     "ax.plot([e[0] for e in Contours], [e[1] for e in Contours], [f(e[0],e[1]) for e in Contours])\n",
     "\n",
-    "#On trace la courbe de niveau\n",
+    "# On trace la courbe de niveau\n",
     "ax.plot(courbeX, courbeY, z0)\n",
     "ax.set_title(f\"Courbe de niveau de f pour z = {z0}\")"
    ]
@@ -1243,17 +1245,17 @@
     "def f2(x,y):\n",
     "    return 2*(np.exp(-np.power(x,2)-np.power(y,2)) - np.exp(-np.power(x-1,2)-np.power(y-1,2)))\n",
     "\n",
-    "#Création du graphe en 3D\n",
+    "# Création du graphe en 3D\n",
     "domain_x = np.linspace(-2,3)   \n",
     "domain_y = np.linspace(-1,2)\n",
     "X, Y = np.meshgrid(domain_x, domain_y)\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "\n",
-    "#On trace f\n",
+    "# On trace f\n",
     "ax.plot_surface(X, Y, f2(X, Y), cmap='winter')\n",
     "\n",
-    "#ON trace la ligne de niveau\n",
+    "# On trace la ligne de niveau\n",
     "z0 = 1\n",
     "courbeX,courbeY = contour(f2, c=z0, xc = np.linspace(-2,3,100), yc = np.linspace(-1,2,100))\n",
     "ax.scatter(courbeX, courbeY, z0, c=\"red\")\n",
@@ -4562,6 +4564,7 @@
     }
    ],
    "source": [
+    "# On trace différentes lignes de niveau avec différents c en 2D\n",
     "for c,color in [(-1.5,\"blue\"), (-1, \"red\"), (-0.5, \"green\"), (0,\"cyan\"), (0.5,\"magenta\"), (1,\"yellow\"), (1.5,\"black\")]:\n",
     "    courbeX,courbeY = contour(f2, c=c, xc = np.linspace(-2,3,100), yc = np.linspace(-1,2,100))\n",
     "    plt.scatter(courbeX, courbeY, label=str(c), c=color, s=1)\n",
@@ -5879,14 +5882,14 @@
     }
    ],
    "source": [
-    "#Création du graphe en 3D\n",
+    "# Création du graphe en 3D\n",
     "domain_x = np.linspace(-3,4)   \n",
     "domain_y = np.linspace(-2,3)\n",
     "X, Y = np.meshgrid(domain_x, domain_y)\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "\n",
-    "#ON trace la ligne de niveau\n",
+    "# On trace la ligne de niveau\n",
     "for c,color in [(-1.5,\"blue\"), (-1, \"red\"), (-0.5, \"green\"), (0,\"cyan\"), (0.5,\"magenta\"), (1,\"yellow\"), (1.5,\"black\")]:\n",
     "    courbeX,courbeY = contour(f2, c=c, xc = domain_x, yc = domain_y)\n",
     "    ax.scatter(courbeX, courbeY, c, label=str(c), c=color, s=1)\n",
@@ -5900,7 +5903,18 @@
     "collapsed": true
    },
    "source": [
-    "### Conclusion"
+    "### Conclusion\n",
+    "\n",
+    "On a réussi à obtenir par deux méthodes différentes la/les ligne(s) de niveau d'une fonction f (testée ici avec une fonction quadratique).\n",
+    "Chacune de ces méthodes présentes des avantages et des inconvénients :\n",
+    "- la première présente l'avantage d'être rapide mais perd en précision\n",
+    "- la deuxième est beaucoup plus précise mais nécéssite un temps d'exécution beaucoup plus long.\n",
+    "On fait ici face au problèmes classque du compromis entre temps et précison.\n",
+    "A vérifier avec le code :\n",
+    "`import time\n",
+    "starttime = time.time()\n",
+    "... code de chaucne des méthodes...\n",
+    "print(\"Temps d execution : %s secondes ---\" % (time.time() - start_time))`"
    ]
   }
  ],
